# sarek

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
ci/: run_tests.sh
examples/cifar10/: data.rs  download-data.sh  main.rs
examples/mnist/: data.rs  main.rs
src/: lib.rs  macros.rs
src/backend/: context.rs  mod.rs  model.rs
src/backend/keras/: async_runner.rs  context.rs  ffi.rs  loss.rs  mod.rs  model.rs  py_array.rs  py_utils.rs  trainer.rs
src/core/: array.rs  data_set.rs  data_source.rs  data_type.rs  indices.rs  into_range.rs  maybe_owned.rs  mod.rs  name.rs  ortho_generator.rs  raw_array_source.rs  shape.rs  slice_source.rs  small_iter.rs  split_data_source.rs  type_cast_error.rs  utils.rs
src/nn/: activation.rs  layers.rs  loss.rs  lsuv.rs  mod.rs  model.rs  optimizers.rs  trainer.rs  training_opts.rs  weight_init.rs
tests/: layers.rs  model.rs
testutils/: Cargo.toml
testutils/src/: lib.rs
